# vsa_bringup

./: CMakeLists.txt  README.md  package.xml
launch/: play_bagfile_and_visualize.launch  vsa_bringup.launch  vsa_bringup_launch.py  vsa_bringup_sim.launch.py
vsa_bringup/: README.md
vsa_stonefish/launch/: lauv_open_sea.launch.py  lauv_tank.launch.py  sparus2_open_sea.launch.py  sparus2_tank.launch.py
vsa_stonefish/scenarios/: lauv_open_sea.scn
vsa_stonefish/vehicles/: _lauv.scn  lauv.scn
